--- a/Hobbies.html
+++ b/Hobbies.html
@@ -2,8 +2,18 @@
 <html>
     <head>
             <title> How I Spend My Time</Title>
+            <link href = "Hobbies.css" type="text/css" rel="stylesheet">
     </head>
     <body>
+        <div class="sidenav">
+            <a>Gunpla</a>
+            <a>Music</a>
+            <a>VideoGames</a>
+        </div>
 
+        <div class="main">
+
+
+        </div>
     </body>
 </html>
