Hobbies Page update
Added a text area where I will display a picture and brief description. It was tricky to get everything into the correct place without having the background cover the entire screen. A few other little changes to favspage and mystyle

--- a/Favspage.html
+++ b/Favspage.html
@@ -1,13 +1,13 @@
 <!Doctype html>
 <html>
     <head>
-        <title>The Things I Like</title>
+        <title>My Favorite Things</title>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
         <link href = "mystyle.css" type="text/css" rel="stylesheet"> 
     </head>
     <body id="bod" ng-app="myApp" ng-controller='myCtrl' ng-style="obj">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <div id="likes" class="pg-perspect">
+        <div id="likes" class="pg-perspect">           
             <script src="likes.js"></script>
             <script src="likepage.js"></script> 
         </div> 
