--- a/Hobbies.html
+++ b/Hobbies.html
@@ -5,6 +5,7 @@
             <link href = "Hobbies.css" type="text/css" rel="stylesheet">
     </head>
     <body>
+        <h1 class="title">Hobbies</h1>
         <div class="sidenav">
             <a>Gunpla</a>
             <a>Music</a>
@@ -12,7 +13,9 @@
         </div>
 
         <div class="main">
+            <textarea cols="150" readonly>
 
+            </textarea>
 
         </div>
     </body>
